src/test/deca/context/valid/test_condition_then_else.deca
// Description:
//    programme avec condition.
//
// Resultats:
//    then branch
//
// Historique:
//    cree le 01/01/2024

{
boolean state = true;
if(state){
    print("then branch");
}
else{
    print("else branch");
}
}
