src/test/deca/context/invalid/wobj/test_while_string.deca
// Description:
//    programme avec condition.
//
// Resultats:
//    ligne 12 : Votre condition doit etre de type boolean
//
// Historique:
//    cree le 01/01/2024

{
string s = "true";
while(s){
    print("valid");
}
}
git status